@@ -3,6 +3,7 @@ Revision history for CGI-Info
 0.93
 	Use facility local0
 	Improved upload filename generation to prevent overwriting
+	allow() now understands Params::Validate type rules
 
 0.92	Thu Feb 13 15:16:57 EST 2025
 	Return empty string with warnings_as_string() rather than undef when no warnings
